# variant

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  WORKSPACE  build_debug.sh  build_release.sh  local_bench.sh  local_build_debug.sh  local_build_release.sh  local_test_debug.sh  local_test_release.sh  run_bench.sh  run_tests_debug.sh  run_tests_release.sh
bench/evaluator/: CMakeLists.txt
dynamic_evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h
dynamic_evaluator/ut/: CMakeLists.txt  evaluator_ut.cpp
eval_benchmark/: CMakeLists.txt  main.cpp
evaluator/: BUILD.bazel  CMakeLists.txt  calculator_main.cc  dynamic.cc  dynamic.cpp  evaluator.h  evaluator_bench.cpp  evaluator_benchmark.cc  evaluator_test.cpp  evaluator_ut.cpp  parsing.cc  parsing.cpp
evaluator/perf/: CMakeLists.txt  main.cpp
evaluator/ut/: CMakeLists.txt  evaluator_ut.cpp
lib/: CMakeLists.txt  matrix_ops.h  meta.h  type_traits.h  variant.h  variant_traits.h
lib/ut/: CMakeLists.txt  main.cpp  variant_ut.cpp
parser/: BUILD.bazel  CMakeLists.txt  parser.h  parser_test.cpp  parser_ut.cpp
static_evaluator/: CMakeLists.txt  evaluator.cpp  evaluator.h
static_evaluator/ut/: CMakeLists.txt  evaluator_ut.cpp
test/: CMakeLists.txt
test/evaluator/: CMakeLists.txt
test/parser/: CMakeLists.txt
test/variant/: CMakeLists.txt
util/: BUILD.bazel  CMakeLists.txt  algo.h  meta.h  util.cpp
variant/: BUILD.bazel  CMakeLists.txt  matrix_ops.h  variant.h  variant_test.cc  variant_traits.h  variant_ut.cpp
variant/internal/: matrix_ops.h  variant_traits.h
variant/ut/: CMakeLists.txt  variant_ut.cpp
