package(default_visibility = ["//visibility:private"])

cc_library(
    name = "evaluator",
    srcs = [
        "dynamic.cpp",
        "parsing.cpp",
    ],
    hdrs = ["evaluator.h"],
    copts = ["-std=c++14"],
    linkstatic = True,
    deps = [
        "//parser",
        "//util",
        "//variant",
    ],
)

cc_test(
    name = "evaulator_test",
    srcs = ["evaluator_test.cpp"],
    copts = ["-std=c++14"],
    deps = [
        ":evaluator",
        "@catch2//:catch2_main",
    ],
)

cc_binary(
    name = "evaluator_bench",
    testonly = 1,
    srcs = ["evaluator_bench.cpp"],
    copts = ["-std=c++14"],
    tags = ["benchmark"],
    deps = [
        ":evaluator",
        "@google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "calculator",
    srcs = ["bin/main.cpp"],
    copts = ["-std=c++14"],
    deps = [":evaluator"],
)
