package(default_visibility = ["//visibility:private"])

cc_library(
    name = "evaluator",
    srcs = [
        "dynamic.cc",
        "parsing.cc",
    ],
    hdrs = ["evaluator.h"],
    copts = ["-std=c++14"],
    linkstatic = True,
    deps = [
        "//parser",
        "//util",
        "//variant",
    ],
)

cc_test(
    name = "evaulator_test",
    srcs = ["evaluator_test.cc"],
    copts = ["-std=c++14"],
    deps = [
        ":evaluator",
        "@catch2//:catch2_main",
    ],
)

cc_binary(
    name = "evaluator_benchmark",
    testonly = 1,
    srcs = ["evaluator_benchmark.cc"],
    copts = ["-std=c++14"],
    tags = ["benchmark"],
    deps = [
        ":evaluator",
        "@google_benchmark//:benchmark",
    ],
)

cc_binary(
    name = "calculator",
    srcs = ["calculator_main.cc"],
    copts = ["-std=c++14"],
    deps = [":evaluator"],
)
